--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".AuthActivity"
+            android:name=".presentation.view.AuthActivity"
             android:label="@string/title_activity_settings"
             android:exported="true">
             <intent-filter>
