Finalization of UI implementation for SignupFragment and LoginFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
         <activity
             android:name=".presentation.view.AuthActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/title_activity_settings"
             android:exported="true">
             <intent-filter>
