--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -9,18 +11,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KidTasker"
         tools:targetApi="31">
-
         <activity
-            android:name=".presentation.view.AuthActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/title_activity_settings"
+            android:name=".presentation.view.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.view.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.view.AuthActivity"
+            android:exported="true"
+            android:label="@string/title_activity_settings"
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
