Added dependency injection using Koin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,8 @@ android {
 }
 
 dependencies {
-    def koin_version= "3.1.2"
-    implementation "io.insert-koin:koin-core:$koin_version"
-    implementation "io.insert-koin:koin-android:$koin_version"
-    testImplementation "io.insert-koin:koin-test:$koin_version"
+    implementation 'io.insert-koin:koin-android:3.1.2'
+    implementation 'io.insert-koin:koin-core:3.1.2'
 
     // Kotlin
     def nav_version = "2.5.3"
@@ -53,7 +51,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.2.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
