--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.view.HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.KidTasker.NoActionBar" />
         <activity
             android:name=".presentation.view.SplashActivity"
             android:exported="true">
